[gd_scene load_steps=4 format=2]

[ext_resource path="res://drops/powerup_points.png" type="Texture" id=1]
[ext_resource path="res://drops/PowerupBase.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 13.0

[node name="PowerupBase" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_screen_exited"]
